# axon

./: .env.example  .gitignore  NEW_PROJECT_BRIEF.md  README.md  dev.sh  pyproject.toml
brain/: main.py
brain/core/: device_registry.py  event_bus.py  script_runner.py
brain/plugins/: _base.py
brain/plugins/aqmh3615ns/: __init__.py  driver.py  manifest.json  mock.py
brain/plugins/astropixels/: __init__.py  driver.py  manifest.json  mock.py
brain/plugins/audio/: __init__.py  driver.py  manifest.json  mock.py
brain/plugins/dc_motor/: __init__.py  driver.py  manifest.json  mock.py
brain/plugins/servo/: __init__.py  driver.py  manifest.json  mock.py
brain/routers/: actions.py  assets.py  config.py  events.py  health.py  plugins.py  profiles.py  scripts.py
controller/api/: main.py
controller/api/routers/: assets.py  profiles.py
controller/ui/: index.html  package-lock.json  package.json
controller/ui/src/: App.jsx  index.css
profiles/r2d2/: audio_index.json  profile.json
profiles/r2d2/scripts/: script-1783146496540.json
tests/: test_device_registry.py  test_event_bus.py
ui/: package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  index.css
ui/src/components/: ConnectionBadge.jsx  DeviceForm.jsx  Layout.jsx  SystemVolume.jsx  ThemePicker.jsx
ui/src/context/: EventBusContext.jsx  RobotContext.jsx  ThemeContext.jsx
ui/src/pages/: Assets.jsx  Build.jsx  Config.jsx  Configure.jsx  Control.jsx  Dashboard.jsx  Home.jsx  Profiles.jsx  Sandbox.jsx  Scripts.jsx
ui/src/utils/: actionRegistry.js  dispatch.js
ui/src/widgets/: index.js  (+7 more)
(+11 files in other folders)
