[project]
name = "axon"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
pi         = ["RPi.GPIO", "adafruit-circuitpython-servokit", "smbus2", "pygame"]
hw-serial  = ["pyserial"]
dev        = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["brain*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
